--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -336,6 +336,71 @@
 </div>
 <!-- End Costs modal -->
 
+
+<!-- Start Personnel Costs modal -->
+<div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="personnel-costs-modal">
+    <div id="personnel-modal-header" class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
+                <h5 class="modal-title">Personnel Job Cost Data</h5>
+
+                <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
+
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label> Estimate Cost </label>
+                            <input class="form-control" placeholder="Estimate cost" id="personnel-estimate-cost"
+                                   disabled>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label> Actual Cost</label>
+                            <input type="number" class="form-control" placeholder="Type actual cost..." id="personnel-actual-cost"
+                                   >
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label> Saving</label>
+                            <input type="number" class="form-control" placeholder="Savings will be calculated once you fill actual cost..." id="personnel-savings"
+                                   disabled>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label> Saving %</label>
+                            <input type="number" class="form-control" placeholder="Savings % will be calculated once you fill actual cost..." id="personnel-savings-percent"
+                                   disabled>
+                        </div>
+                    </div>
+                    <div class="col-sm-12" style="display:none">
+                        <div class="form-group">
+                            <label> Personnel Id</label>
+                            <input type="number" class="form-control" id="personnel-id"
+                                   disabled>
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" data-dismiss="modal" type="button"> Close</button>
+                <button class="btn btn-primary" type="button" id="save-personnel-costs"> Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Personnel Costs modal -->
 <nav class="fixed-header">
 
     <div class="navigation-header">
@@ -405,54 +470,54 @@
                         </li>
                     </ul>
                 </li>
-                <li>
+                <!--<li>-->
 
-                    <a href="javascript:void(0);" class="have-submenu">
-                        <span class="icon-thumbnail"><i class="dripicons-align-justify"></i></span>
-                        <span class="title">Consolidations</span>
-                    </a>
-                    <ul class="sub-menu">
-                        <li>
-                            <a href="consolidations.html">
-                                <span class="icon-thumbnail"><i class="dripicons-dots-3"></i></span>
-                                <span class="title">Pending</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="done_consolidations.html">
-                                <span class="icon-thumbnail"><i class="dripicons-checkmark"></i></span>
-                                <span class="title">Done</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
+                    <!--<a href="javascript:void(0);" class="have-submenu">-->
+                        <!--<span class="icon-thumbnail"><i class="dripicons-align-justify"></i></span>-->
+                        <!--<span class="title">Consolidations</span>-->
+                    <!--</a>-->
+                    <!--<ul class="sub-menu">-->
+                        <!--<li>-->
+                            <!--<a href="consolidations.html">-->
+                                <!--<span class="icon-thumbnail"><i class="dripicons-dots-3"></i></span>-->
+                                <!--<span class="title">Pending</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a href="done_consolidations.html">-->
+                                <!--<span class="icon-thumbnail"><i class="dripicons-checkmark"></i></span>-->
+                                <!--<span class="title">Done</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</li>-->
+                <!--<li>-->
 
-                    <a href="javascript:void(0);" class="have-submenu">
-                        <span class="icon-thumbnail"><i class="dripicons-user-group"></i></span>
-                        <span class="title">Personnel</span>
-                    </a>
-                    <ul class="sub-menu">
-                        <li>
-                            <a href="personnel.html">
-                                <span class="icon-thumbnail"><i class="dripicons-dots-3"></i></span>
-                                <span class="title">Pending</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="done_personnel.html">
-                                <span class="icon-thumbnail"><i class="dripicons-checkmark"></i></span>
-                                <span class="title">Done</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="deleted_personnel.html" id="deleted-person" hidden>
-                                <span class="icon-thumbnail"><i class="dripicons-cross"></i></span>
-                                <span class="title">Deleted</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+                    <!--<a href="javascript:void(0);" class="have-submenu">-->
+                        <!--<span class="icon-thumbnail"><i class="dripicons-user-group"></i></span>-->
+                        <!--<span class="title">Personnel</span>-->
+                    <!--</a>-->
+                    <!--<ul class="sub-menu">-->
+                        <!--<li>-->
+                            <!--<a href="personnel.html">-->
+                                <!--<span class="icon-thumbnail"><i class="dripicons-dots-3"></i></span>-->
+                                <!--<span class="title">Pending</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a href="done_personnel.html">-->
+                                <!--<span class="icon-thumbnail"><i class="dripicons-checkmark"></i></span>-->
+                                <!--<span class="title">Done</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li>-->
+                            <!--<a href="deleted_personnel.html" id="deleted-person" hidden>-->
+                                <!--<span class="icon-thumbnail"><i class="dripicons-cross"></i></span>-->
+                                <!--<span class="title">Deleted</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</li>-->
                 <li id="add_data_list" hidden>
                     <a href="add_data.html">
                         <span class="title">MANAGE DATA</span>
