--- a/pages/consolidations.html
+++ b/pages/consolidations.html
@@ -63,8 +63,60 @@
         </style>
     </head>
     <body class="top-navigation">
+        <!-- Start Global Search modal -->
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="global-search-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
+            <div id="global-search-modal-header" class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
+                        <h5 class="modal-title">Global Search</h5>
+
+                        <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label> Job Reference</label>
+                                    <input type="text" class="form-control" placeholder="Type job reference..." id="global-search-reference" />
+                                </div>
+                            </div>
+                            <div class="col-sm-12" id="global-search-results" style="display: none">
+                                <div class="form-group">
+                                    <label> Search Results</label>
+                                    <ul id="search-reslts-list" style="color: black"></ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
+                        <button class="btn btn-primary" type="button" id="search-reference-btn">Search</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Help modal -->
         <!-- Start Help modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="help-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="help-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="help-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -110,7 +162,16 @@
         </div>
         <!-- End Help modal -->
         <!-- Start Group Data Modal-->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="group-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="group-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="cost-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -136,7 +197,12 @@
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label> Service</label>
-                                    <select class="form-control select" id="service-type-select" data-placeholder="Choose service..." tabindex="1"></select>
+                                    <select
+                                        class="form-control select"
+                                        id="service-type-select"
+                                        data-placeholder="Choose service..."
+                                        tabindex="1"
+                                    ></select>
                                 </div>
                             </div>
                         </div>
@@ -145,13 +211,23 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> Ex</label>
-                                        <select class="form-control select" id="group-ex-select" data-placeholder="Choose city..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="group-ex-select"
+                                            data-placeholder="Choose city..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> To</label>
-                                        <select class="form-control select" id="group-to-select" data-placeholder="Choose city..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="group-to-select"
+                                            data-placeholder="Choose city..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                             </div>
@@ -168,7 +244,12 @@
                                     <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
-                                        <input class="single-date-picker form-control" type="text" placeholder="Select consol. deadline" id="group-deadline" />
+                                        <input
+                                            class="single-date-picker form-control"
+                                            type="text"
+                                            placeholder="Select consol. deadline"
+                                            id="group-deadline"
+                                        />
                                     </div>
                                 </div>
                             </div>
@@ -285,7 +366,9 @@
                             <button class="btn btn-danger mt-2" onclick="window.location.reload()">REFRESH</button>
                         </li>
                         <input placeholder="Search Table..." id="search_datatable" style="float: right; height: 35px; margin: 5px" />
-                        <!-- <button class="btn btn-info mt-2" id="help-btn" style="float: right; height: 35px; margin: 5px">Help</button> -->
+                        <button class="btn btn-info mt-2" id="global-search-modal-btn" style="float: right; height: 35px; margin: 5px">
+                            GLOBAL SEARCH
+                        </button>
                     </ul>
                 </div>
             </nav>
