--- a/pages/deleted_individuals.html
+++ b/pages/deleted_individuals.html
@@ -62,8 +62,60 @@
         </style>
     </head>
     <body class="top-navigation">
+        <!-- Start Global Search modal -->
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="global-search-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
+            <div id="global-search-modal-header" class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
+                        <h5 class="modal-title">Global Search</h5>
+
+                        <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="form-group">
+                                    <label> Job Reference</label>
+                                    <input type="text" class="form-control" placeholder="Type job reference..." id="global-search-reference" />
+                                </div>
+                            </div>
+                            <div class="col-sm-12" id="global-search-results" style="display: none">
+                                <div class="form-group">
+                                    <label> Search Results</label>
+                                    <ul id="search-reslts-list" style="color: black"></ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
+                        <button class="btn btn-primary" type="button" id="search-reference-btn">Search</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Help modal -->
         <!-- Start Help modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="help-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="help-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="help-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -109,7 +161,16 @@
         </div>
         <!-- End Help modal -->
         <!-- Start Notes modal -->
-        <div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%" id="notes-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade bd-example-modal-sm"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="notes-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="edit-notes-modal-header" class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -230,7 +291,9 @@
                             <button id="empty-trashcan" class="btn btn-success mt-2">EMPTY TRASHCAN</button>
                         </li>
                         <input placeholder="Search Table..." id="search_datatable" style="float: right; height: 35px; margin: 5px" />
-                        <button class="btn btn-info mt-2" id="help-btn" style="float: right; height: 35px; margin: 5px">Help</button>
+                        <button class="btn btn-info mt-2" id="global-search-modal-btn" style="float: right; height: 35px; margin: 5px">
+                            GLOBAL SEARCH
+                        </button>
                     </ul>
                 </div>
             </nav>
