--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -62,7 +62,16 @@
     </head>
     <body class="top-navigation">
         <!-- Start Global Search modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="global-search-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="global-search-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="global-search-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -79,10 +88,10 @@
                                     <input type="text" class="form-control" placeholder="Type job reference..." id="global-search-reference" />
                                 </div>
                             </div>
-                            <div class="col-sm-12" id="global-search-results">
+                            <div class="col-sm-12" id="global-search-results" style="display: none">
                                 <div class="form-group">
                                     <label> Search Results</label>
-                                    <ul id="search-reslts-list"></ul>
+                                    <ul id="search-reslts-list" style="color: black"></ul>
                                 </div>
                             </div>
                         </div>
@@ -96,7 +105,16 @@
         </div>
         <!-- End Help modal -->
         <!-- Start Job modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" id="add-job-modal" style="top: 15%" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            id="add-job-modal"
+            style="top: 15%"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="job-modal-header" class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -111,19 +129,36 @@
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Department*</label>
-                                        <select class="form-control select" id="division-select" data-placeholder="Choose a department..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="division-select"
+                                            data-placeholder="Choose a department..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Product*</label>
-                                        <select class="form-control select" id="product-select" multiple data-placeholder="Choose a product..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="product-select"
+                                            multiple
+                                            data-placeholder="Choose a product..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Vessel*</label>
-                                        <select class="form-control select" id="vessel-select" multiple data-placeholder="Choose a vessel..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="vessel-select"
+                                            multiple
+                                            data-placeholder="Choose a vessel..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                             </div>
@@ -162,7 +197,12 @@
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Service</label>
-                                        <select class="form-control select" id="service-type-select" data-placeholder="Choose service..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="service-type-select"
+                                            data-placeholder="Choose service..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-2">
@@ -233,7 +273,16 @@
         <!-- End Job modal -->
 
         <!-- Start Costs modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="costs-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="costs-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="cost-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -264,7 +313,12 @@
                                     <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
-                                        <input class="single-date-picker form-control" type="text" placeholder="Select group deadline" id="group_cut_off_date" />
+                                        <input
+                                            class="single-date-picker form-control"
+                                            type="text"
+                                            placeholder="Select group deadline"
+                                            id="group_cut_off_date"
+                                        />
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
@@ -284,13 +338,23 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> Group Ex*</label>
-                                        <select class="form-control select" id="group-ex-select" data-placeholder="Choose city..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="group-ex-select"
+                                            data-placeholder="Choose city..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> Group To*</label>
-                                        <select class="form-control select" id="group-to-select" data-placeholder="Choose city..." tabindex="1"></select>
+                                        <select
+                                            class="form-control select"
+                                            id="group-to-select"
+                                            data-placeholder="Choose city..."
+                                            tabindex="1"
+                                        ></select>
                                     </div>
                                 </div>
                             </div>
@@ -341,7 +405,16 @@
         <!-- End Costs modal -->
 
         <!-- Start Personnel Costs modal -->
-        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="personnel-costs-modal" data-keyboard="false" data-backdrop="static">
+        <div
+            aria-hidden="true"
+            class="modal fade"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="personnel-costs-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
             <div id="personnel-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -369,13 +442,25 @@
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label> Saving</label>
-                                    <input type="number" class="form-control" placeholder="Savings calculated from actual cost..." id="personnel-savings" disabled />
+                                    <input
+                                        type="number"
+                                        class="form-control"
+                                        placeholder="Savings calculated from actual cost..."
+                                        id="personnel-savings"
+                                        disabled
+                                    />
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label> Saving %</label>
-                                    <input type="number" class="form-control" placeholder="Savings calculated from actual cost..." id="personnel-savings-percent" disabled />
+                                    <input
+                                        type="number"
+                                        class="form-control"
+                                        placeholder="Savings calculated from actual cost..."
+                                        id="personnel-savings-percent"
+                                        disabled
+                                    />
                                 </div>
                             </div>
                             <div class="col-sm-12" style="display: none">
@@ -490,7 +575,9 @@
                         </li>
 
                         <input placeholder="Search Table..." id="search_datatable" style="float: right; height: 35px; margin: 5px" />
-                        <button class="btn btn-info mt-2" id="global-search-modal-btn" style="float: right; height: 35px; margin: 5px">GLOBAL SEARCH</button>
+                        <button class="btn btn-info mt-2" id="global-search-modal-btn" style="float: right; height: 35px; margin: 5px">
+                            GLOBAL SEARCH
+                        </button>
                     </ul>
                 </div>
             </nav>
